# neuropool-rs

./: .gitignore  Cargo.toml  README.md  neuropool.md
examples/: accuracy_test.rs  learning_demo.rs  spatial_prototype.rs  word_memory_prototype.rs
firmware/morphogen/: autonomic.rune  cardiac.rune  respiratory.rune
firmware/neurogen/: basal_ganglia.rune  brainstem.rune  cerebellum.rune  frontal.rune  hippocampus.rune  occipital.rune  parietal.rune  temporal.rune  thalamus.rune
firmware/nuclei/: memory_access.rune  motor_integrate.rune  multimodal_bind.rune  novelty_detect.rune  pacemaker.rune  selective_gate.rune  sensory_transduce.rune  similarity_detect.rune
src/: binding.rs  cascade.rs  codec.rs  density.rs  io.rs  lib.rs  neuron.rs  plasticity.rs  pool.rs  stats.rs  synapse.rs  template.rs
src/runes/: cascade.rs  learning.rs  mod.rs  signal.rs
src/runes/neurogen/: budget.rs  builder.rs  develop.rs  harness.rs  mod.rs  trophic.rs
src/spatial/: anatomy.rs  cascade.rs  integration_test.rs  interface.rs  load_test.rs  migration.rs  mod.rs  neuron.rs  nuclei.rs  plasticity.rs  pruning.rs  runtime.rs  snapshot.rs  synapse.rs  tissue.rs  wiring.rs
src/unified/: cascade.rs  disc.rs  grid.rs  incubate.rs  io.rs  mod.rs  neuron.rs  persist.rs  plasticity.rs  pruning.rs  synapse.rs  wiring.rs  zone.rs
tests/: brainstem_organ_test.rs  firmware_parse_test.rs
