[package]
name = "neuropool"
version = "3.0.0"
edition = "2021"
description = "Neuromorphic neuron pool substrate — zone-aware cascade engine with dendritic compartments, imaginal disc incubation, and binary persistence"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Blackfall-Labs/neuropool-rs"
keywords = ["neuromorphic", "spiking", "plasticity", "neuron", "synapse"]
categories = ["science", "simulation"]

[features]
default = []
runes = ["dep:runes-core"]

[dependencies]
ternary-signal = "0.2"
log = "0.4"
runes-core = { git = "https://github.com/Blackfall-Labs/runes", package = "runes-core", optional = true }

[dev-dependencies]
env_logger = "0.11"
image = { version = "0.25", default-features = false, features = ["png"] }
runes-core = { git = "https://github.com/Blackfall-Labs/runes", package = "runes-core" }
runes-parser = { git = "https://github.com/Blackfall-Labs/runes", package = "runes-parser" }
